--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 .rectangle{
   height:100px;
   width:100px;
-  background-color: aquamarine;
+  background-color: rgb(148, 196, 17);
   border:1px solid black;
 }
 .circle{
